syntax = "proto3";
package gagarin.network.core;

option go_package = "pb";

import "google/protobuf/any.proto";

message Message {
    MessageType type = 1;
    google.protobuf.Any payload = 3;

    enum MessageType {
        HELLO_REQUEST   = 0;
        HELLO_RESPONSE   = 1;
        SYNCHRONIZE   = 2;
        VOTE    = 3;
        PROPOSAL = 4;
        BLOCK_REQUEST = 5;
        BLOCK_RESPONSE = 6;
        TRANSACTION = 7;
        HEADERS_REQUEST = 8;
        HEADERS_RESPONSE = 9;
    }
}

message HelloPayload {
    int32 version = 1;
    int32 topBlockHeight = 2;
    int64 time = 3;
}

message SynchronizePayload {
    oneof cert {
        QuorumCertificate qc = 1;
        SynchronizeCertificate sc = 2;
    }
    Signature signature = 3;
    Signature votingSignature = 4;
    int32 height = 5;
}

message ProposalPayload {
    oneof cert {
        QuorumCertificate qc = 1;
        SynchronizeCertificate sc = 2;
    }
    Signature signature = 3;
    Block block = 4;
}

message VotePayload {
    oneof cert {
        QuorumCertificate qc = 1;
        SynchronizeCertificate sc = 2;
    }
    Signature signature = 3;
    BlockHeader header = 4;
}

message Signature {
    bytes from = 1;
    bytes signature = 2;
}

message SignatureAggregate {
    bytes bitmap = 1;
    bytes signature = 2;
}

message HeadersRequest {
    int32 low = 1;
    int32 high = 2;
}

message HeadersResponse {
    oneof response {
        Headers headers = 1;
        Error errorCode = 2;
    }
}

message Headers {
    repeated BlockHeader headers = 1;
}
message BlockRequestPayload {
    bytes hash = 1;
}

message BlockResponsePayload {
    oneof response {
        Block block = 1;
        Error errorCode = 2;
    }
}

message Error {
    ErrorCode code = 1;
    string    desc = 2;

    enum ErrorCode {
        NOT_FOUND   = 0;
        BAD_REQUEST    = 1;
    }
}
message QuorumCertificate {
    CertType    type = 1;
    BlockHeader header = 2;
    SignatureAggregate signatureAggregate = 3;

    enum CertType {
        QREF   = 0;
        EMPTY    = 1;
    }
}

message SynchronizeCertificate {
    int32 height = 1;
    SignatureAggregate signatureAggregate = 3;
}

message Block {
    BlockHeader header = 1;
    QuorumCertificate cert = 2;
    SignatureAggregate signatureAggregate = 3;
    BlockData data = 4;
    repeated Transaction txs = 5;
}

message BlockHeader {
    bytes hash = 1;
    bytes parentHash = 2;
    bytes qcHash = 3;
    bytes dataHash = 4;
    bytes txHash = 5;
    bytes stateHash = 6;
    int32 height = 7;
    int64 timestamp = 8;
}

message BlockData {
    bytes data = 1;
}

message Transaction {
    Type  type = 1;
    bytes to = 2;
    uint64 nonce = 3;
    int64 value = 4;
    int64 fee = 5;
    Signature signature = 6;
    bytes data = 7;
    bytes from = 8;

    enum Type {
        PAYMENT = 0;
        SLASHING = 1;
        SETTLEMENT = 2;
        AGREEMENT = 3;
        PROOF = 4;
        REDEEM = 5;
    }
}